completed basic functionality it was on the console now to display it on the DOM

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="content">
         <h1>Recipe_Suggester</h1>
         <div class="search">
-            <input type="text" placeholder="item">
+            <input type="text" placeholder="item" class="input">
             <button>Search</button>
         </div>
     </div>
