first stable version

--- a/index.html
+++ b/index.html
@@ -13,7 +13,25 @@
             <input type="text" placeholder="item" class="input">
             <button>Search</button>
         </div>
+        <h2 id="error">
+
+        </h2>
+        <div class="option">
+            <div class="option1">
+                <h1 class="text1"></h1>
+                <div class="img1"></div>
+            </div>
+            <div class="option2">
+                <div class="img2"></div>
+                <h1 class="text2"></h1>
+            </div>
+            <div class="option3">
+                <h1 class="text3"></h1>
+                <div class="img3"></div>
+            </div>
+        </div>
     </div>
+    
     <script src="app.js"></script>
 </body>
 </html>
